src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ProRate_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check here if you want to allow pro-rating of prices for this product based. E.g. If price set-up is $1200 for one year subscription and when it is sold for 3 month subscription, pro-rated price on opportunity line item would be 1200 * (3/12) = $300.</description>
        <inlineHelpText>Check here if you want to allow pro-rating of prices for this product based. E.g. If price set-up is $1200 for one year subscription and when it is sold for 3 month subscription, pro-rated price on opportunity line item would be 1200 * (3/12) = $300.</inlineHelpText>
        <label>Can the price be pro-rated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_To_Use_In_Renewal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pick different product to be added to renewal opportunity when application creates renewal opportunity when this product is part of source opportunity.</description>
        <inlineHelpText>Pick different product to be added to renewal opportunity when application creates renewal opportunity when this product is part of source opportunity.</inlineHelpText>
        <label>Pick Different Product to use in Renewal</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Supporting_Products_in_Renewal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Term_Months__c</fullName>
        <inlineHelpText>Number of months after which this product would be renewed.</inlineHelpText>
        <label>Renewal Term (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_this_same_product_in_Renewal_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when you want to use this same product while creating Renewal Opportunity.</description>
        <inlineHelpText>Check this box when you want to use this same product while creating Renewal Opportunity.</inlineHelpText>
        <label>Use this same product in Renewal Opp</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <validationRules>
        <fullName>Cannot_be_renewed_in_two_ways</fullName>
        <active>true</active>
        <description>Product is either self-renewable or renewed via another product. It CANNOT be both. Pick only one of two.</description>
        <errorConditionFormula>(Product_To_Use_In_Renewal__c &lt;&gt; NULL &amp;&amp; Use_this_same_product_in_Renewal_Opp__c = true)</errorConditionFormula>
        <errorMessage>Product is either self-renewable or renewed via another product. It CANNOT be both. Pick only one of two.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pro_Rate_only_renewable_products</fullName>
        <active>true</active>
        <errorConditionFormula>(Product_To_Use_In_Renewal__c == NULL &amp;&amp; Use_this_same_product_in_Renewal_Opp__c = false &amp;&amp; ProRate_Price__c = true)</errorConditionFormula>
        <errorDisplayField>ProRate_Price__c</errorDisplayField>
        <errorMessage>Only renewable products are allowed to be pro-rated. Un-check &apos;can the product be pro-rated?&apos; checkbox or make this product renewable to save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Renewal_Term_is_defined</fullName>
        <active>true</active>
        <description>Making sure that renewal term is defined for renewable products</description>
        <errorConditionFormula>(Product_To_Use_In_Renewal__c &lt;&gt; NULL || Use_this_same_product_in_Renewal_Opp__c = true) &amp;&amp; ISNULL(Renewal_Term_Months__c)</errorConditionFormula>
        <errorDisplayField>Renewal_Term_Months__c</errorDisplayField>
        <errorMessage>Please enter renewal term for a renewable product</errorMessage>
    </validationRules>
</CustomObject>